# shackbot

./: .gitignore  README.md  flake.nix  pyproject.toml
src/face2face/: OPTIMIZATION_IDEAS.md  README.md
src/face2face/core/: face2face.py
src/face2face/core/compatibility/: FaceAnalysis.py
src/face2face/core/mixins/: _face_embedding.py  _face_recognition.py  _image_swap.py
src/face2face/core/modules/: file_writable_face.py  utils.py
src/plugins/: kirkify.py  nerd.py
src/plugins/face/: extension.py
src/shackbot/: __main__.py  file.py
src/shackbot/plugins/: nerd.py
src/shackbot/plugins/face/: ArcFace.py  Face.py  FaceAnalyser.py  FaceEnhancer.py  FaceSwapper.py  Landmark.py  RetinaFace.py  extension.py  math.py  models.py
